Signed-off-by: Buddhika <buddhika@cacore-app-server-2.asia-southeast1-c.c.my-project-1537433467858.internal>

--- a/src/main/webapp/inward/inpatient_search.xhtml
+++ b/src/main/webapp/inward/inpatient_search.xhtml
@@ -21,6 +21,7 @@
                                     value="#{admissionController.fromDate}" 
                                     class="w-100"
                                     inputStyleClass="form-control"
+                                    showTime="true"
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
                                 </p:datePicker>
                                 <p:outputLabel value="Date of Admission to " styleClass="form-label"></p:outputLabel>
@@ -28,6 +29,7 @@
                                     value="#{admissionController.toDate}" 
                                     class="w-100"
                                     inputStyleClass="form-control"
+                                    showTime="true"
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
                                 </p:datePicker>
                             </div>
