--- a/src/main/webapp/timeout.xhtml
+++ b/src/main/webapp/timeout.xhtml
@@ -9,7 +9,10 @@
     <h:body>
         <h1>Timeed Out. Please login again</h1>
         <h:form >
-            <p:commandButton value="Login Page" action="/index" ></p:commandButton>
+            <p:commandButton 
+                value="Login Page" 
+                action="/index" 
+                ajax="false"></p:commandButton>
         </h:form>
     </h:body>
 </html>
