closes #1670 Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/admin/users/change_password.xhtml
+++ b/src/main/webapp/admin/users/change_password.xhtml
@@ -29,10 +29,11 @@
                         <p:outputLabel  value="#{webUserController.current.webUserPerson.name}" ></p:outputLabel>
                         <p:outputLabel  value="User Name" ></p:outputLabel>
                         <p:outputLabel  value="#{webUserController.current.name}" ></p:outputLabel>
-                        <h:outputLabel value="New Password"/>
-                        <h:inputSecret  value="#{webUserController.newPassword}"/>
-                        <h:outputLabel value="Re-enter new Password"/>
-                        <h:inputSecret   value="#{webUserController.newPasswordConfirm}"/>
+                        <p:outputLabel value="New Password" for="pw1"/>
+                        <p:password toggleMask="true" id="pw1" validatorMessage="Passwords are NOT matching." match="pw2" feedback="true" maxlength="15" value="#{webUserController.newPassword}"/>
+                        <p:outputLabel value="Re-enter New Password" for="pw2"/>
+                        <p:password toggleMask="true" id="pw2" maxlength="15" value="#{webUserController.newPasswordConfirm}"/>
+
                         <p:defaultCommand target="btnChangePassword"/>
                         <p:commandButton id="btnChangePassword" ajax="false" value="Change Password" 
                                          action="#{webUserController.changeCurrentUserPassword}" 
