--- a/src/main/webapp/timeout.xhtml
+++ b/src/main/webapp/timeout.xhtml
@@ -7,7 +7,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h1>Timeed Out. Please login again</h1>
+        <h1>Timed Out. Please login again</h1>
         <h:form >
             <p:commandButton value="Login Page" action="/index" ></p:commandButton>
         </h:form>
