--- a/src/main/webapp/admin/users/user_department.xhtml
+++ b/src/main/webapp/admin/users/user_department.xhtml
@@ -20,48 +20,68 @@
                         <f:facet name="header">
                             <h:outputLabel value="Departments User Can Log"/>
                         </f:facet>
+
+                        <h:panelGrid columns="2">
+
+                        </h:panelGrid>
+
                         <h:panelGrid columns="2">
                             <h:outputLabel value="User"/>
                             <p:autoComplete id="user" forceSelection="true"
                                             completeMethod="#{webUserController.completeUser}" var="us"
                                             itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"
-                                            value="#{userDepartmentController.selectedUser}">
+                                            value="#{userDepartmentController.selectedUser}" class="mx-4 w-100">
                                 <f:ajax event="itemSelect" execute="user" render="ins2" />
                             </p:autoComplete>
-                        </h:panelGrid>
 
-                        <h:panelGrid columns="2">
                             <h:outputText value="Institution" />
                             <p:autoComplete forceSelection="true"
                                             value="#{userDepartmentController.currentInstituion}"
                                             completeMethod="#{institutionController.completeIns}" id="ins2"
-                                            var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30">
+                                            var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" styleClass="w-100" class="mx-4">
                                 <p:ajax event="itemSelect" process="@this" update="dept2" />
                             </p:autoComplete>
 
                             <h:outputText value="Department" />
-                            <p:selectOneMenu id="dept2" value="#{userDepartmentController.currentDepartment}">
-                                <f:selectItem itemLabel="Please select a Department"/>
+                            <p:selectOneMenu id="dept2" value="#{userDepartmentController.currentDepartment}" class=" mx-4">
+                                <f:selectItem  itemLabel="Please select a Department"/>
                                 <f:selectItems value="#{departmentController.getInsDepartments(userDepartmentController.currentInstituion)}" var="d" itemLabel="#{d.name}" itemValue="#{d}" />
                             </p:selectOneMenu>
 
-                            <p:commandButton id="btnAddDepartments" ajax="false" value="Add" action="#{userDepartmentController.addDepartmentForUser()}"/>
-                            <p:defaultCommand target="btnAddDepartments"/>
+                            <p:commandButton id="btnAddDepartments"
+                                             value="Add"
+                                             icon="fa fa-plus"
+                                             action="#{userDepartmentController.addDepartmentForUser()}"
+                                             class="w-100 my-2 ui-button-success"
+                                             update="tblUserDepartment"/>
+
+                            <p:defaultCommand target="btnAddDepartments" />
+
+                            <p:poll interval="1000" update="tblUserDepartment"/>
+
+                            <h:panelGrid id="tblUserDepartment"> 
+                                <p:dataTable value="#{userDepartmentController.items}" var="i">
+                                    <p:column headerText="Institution">
+                                        <h:outputLabel value="#{i.department.institution.name}"/>                              
+                                    </p:column>
+                                    <p:column headerText="Department">
+                                        <h:outputLabel value="#{i.department.name}"/>                              
+                                    </p:column>
+                                    <p:column>
+                                        <p:commandButton ajax="false" value="Remove" action="#{userDepartmentController.delete()}">
+                                            <f:setPropertyActionListener value="#{i}" target="#{userDepartmentController.current}"/>
+                                        </p:commandButton>
+                                    </p:column>
+                                </p:dataTable>  
+                            </h:panelGrid>
+
+
+
                         </h:panelGrid>
 
-                        <p:dataTable  value="#{userDepartmentController.items}" var="i">
-                            <p:column headerText="Institution">
-                                <h:outputLabel value="#{i.department.institution.name}"/>                              
-                            </p:column>
-                            <p:column headerText="Department">
-                                <h:outputLabel value="#{i.department.name}"/>                              
-                            </p:column>
-                            <p:column >
-                                <p:commandButton ajax="false" value="Remove" action="#{userDepartmentController.delete()}" >
-                                    <f:setPropertyActionListener value="#{i}" target="#{userDepartmentController.current}"/>
-                                </p:commandButton>
-                            </p:column>
-                        </p:dataTable>   
+
+
+
 
                     </p:panel>
 
