Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/pharmacy/admin/index.xhtml
+++ b/src/main/webapp/pharmacy/admin/index.xhtml
@@ -49,6 +49,12 @@
                                     </p:tab>
                                     <p:tab title="Medatada Management - Individual">
                                         <div class="d-grid gap-2">
+                                             <p:commandButton 
+                                                class="w-100" 
+                                                ajax="false" 
+                                                value="Pharmaceutical Item Categories" 
+                                                action="#{pharmacyController.navigateToPharmaceuticalItemCategories()}" />
+                                            
                                             <p:commandButton 
                                                 class="w-100" 
                                                 ajax="false" 
